# pi-ros2-robot

./: .gitignore  README.md
secon26_bringup/: secon26_mission_controller.py
secon26_bringup/launch/: stage2_localization_launch.py  stage4_mission_launch.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: robot.launch.py  sim.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: description.launch.py
src/robot_description/urdf/: robot.urdf.xacro
src/robot_drivers/: CMakeLists.txt  package.xml
src/robot_drivers/config/: tb6612_config.yaml
src/robot_drivers/launch/: drivers.launch.py
src/robot_drivers/robot_drivers/: tb6612_motor_driver_node.py
src/robot_effectors/: CMakeLists.txt  package.xml
src/robot_effectors/config/: effector_config.yaml
src/robot_effectors/launch/: effectors.launch.py
src/robot_effectors/robot_effectors/: crank_controller_node.py  paddle_controller_node.py
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: nav2_params.yaml
src/robot_navigation/launch/: navigation.launch.py
src/robot_navigation/robot_navigation/: antenna_task_router.py  crater_safety_monitor.py  localization_monitor.py  waypoint_manager.py
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_simulation/launch/: gazebo.launch.py
src/robot_simulation/worlds/: competition_arena.world
