<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>robot_effectors</n>
  <version>0.1.0</version>
  <description>
    DSServo controller package for 3 servo effectors on Raspberry Pi 4/5.
    Paddle servos (×2) trigger on LiDAR proximity events.
    Crank servo triggers on Nav2 goal-reached events.
  </description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <depend>nav2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
