<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>robot_simulation</n>
  <version>0.1.0</version>
  <description>Gazebo simulation world and spawn launch for the personal competition robot.</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>robot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
